# degiro-tax-report

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  money.rs  portfolio.rs
testdata/: data.csv
tests/: degiro.rs
