[package]
name = "degiro-tax-report"
version = "0.1.0"
edition = "2018"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
description = "A library and a cli application to calculate annual tax reports"
license = "MIT OR Apache-2.0"
repository = "https://github.com/petar-dambovaliev/degiro-tax-report"
keywords = ["tax", "tax-report", "degiro", "annual-report"]
categories = ["command-line-utilities", "asynchronous", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
dateparser = "0.1.6"
decimal = { version = "2.1.0", features = ["serde"]}
regex = "1.5.4"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
futures = "0.3.19"
tokio = {version = "1.16.1", features = ["full"]}
anyhow = "1.0.53"
rev_lines = "0.2.1"
clap = {version = "3.0.14", features = ["default", "derive"]}